# chalice-otameshi

./: .gitignore  README.md  compose.dev.yml  compose.devcontainer.yml
chalice-app/: .gitignore  app.py  dev.Dockerfile  note.md  pyproject.toml  requirements-dev.txt  requirements.txt
chalice-app/.chalice/: config.json
chalice-app/.devcontainer/: devcontainer.json
chalice-app/aws-cfn/: cognito.yaml
chalice-app/chalicelib/: app.py
chalice-app/chalicelib/otameshi/: app_otameshi.py
chalice-app/chalicelib/todo/: app_todo.py
chalice-app/src/otameshi/: app_otameshi.py
chalice-app/src/todo/: app_todo.py
chalice-app/tests/: conftest.py
chalice-app/tests/feature/otameshi/: test_api.py  test_otameshi_api.py
chalice-app/tests/feature/todo/: test_todo_api.py
chalice-app/tests/helper/aws/: cognito_testuser_helper.py  test_cognito_testuser.py
chalice-app/tests/unit/: test_pytest_get_stargted.py
chalice-app/tests/unit/otameshi/: test_api.py
next-app/: dev.Dockerfile
next-app/.devcontainer/: devcontainer.json
