[tool.poetry]
name = "chalice-app"
version = "0.1.0"
description = ""
authors = ["Suehiro24 <hayatasato.0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chalice = "^1.29.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"
pytest = "^7.4.2"
cfn-lint = "^0.82.1"
pydot = "^1.4.2"
boto3-stubs = {extras = ["cognito-idp", "essential"], version = "^1.28.68"}

[tool.pytest.ini_options]
markers = [
  "learning: mark a test as a learning test",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
